# amail

./: .gitignore  .pre-commit-config.yaml  .terraform-version  Cargo.toml  LICENCE  docker-compose.yml  justfile  main.tf  mta-sts.tf  outputs.tf  variables.tf  versions.tf
.github/: dependabot.yml
.github/workflows/: lint.yml
eml-client/: .gitignore  App.svelte  api.js  eslint.config.js  global.scss  index.html  justfile  package.json  prettier.config.cjs  rollup.config.js  svelte.config.js  vite.config.js
eml-client/components/: Eml.svelte  EmlAddresses.svelte  EmlAttachment.svelte  EmlBodyPart.svelte  EmlCompose.svelte  EmlList.svelte  EmlListItem.svelte  EmlNewModal.svelte  EmlReplyModal.svelte  NavQueryItem.svelte  PdfAttachmentViewer.svelte  RelativeDate.svelte  Search.svelte  TagBadges.svelte  TagQueryModal.svelte  TagsSelect.svelte  VCalSummary.svelte
eml-client/routes/: List.svelte  Single.svelte
eml-client/src/: App.svelte  api.js  main.js
eml-client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
eml-client/src-tauri/capabilities/: migrated.json
eml-client/src-tauri/src/: build.rs  eml.rs  error.rs  main.rs
eml-client/src/components/: Eml.svelte  EmlAddresses.svelte  EmlAttachment.svelte  EmlBodyPart.svelte  EmlCompose.svelte  EmlList.svelte  EmlListItem.svelte  EmlNewModal.svelte  EmlReplyModal.svelte  NavQueryItem.svelte  PdfAttachmentViewer.svelte  RelativeDate.svelte  Search.svelte  TagBadges.svelte  TagQueryModal.svelte  TagsSelect.svelte  VCalSummary.svelte
eml-client/xtask-frontend/: Cargo.toml
eml-client/xtask-frontend/src/: lib.rs
lambda-smtp-relay/: .gitignore  Cargo.toml  handler.rs  main.tf  outputs.tf  test.json  variables.tf
notmuch-more/: Cargo.toml
notmuch-more/src/: compose.rs  database.rs  error.rs  lib.rs  parse.rs  query.rs  smtp.rs  tags.rs
notmuch-more/src/parse/: addresses.rs  body.rs  error.rs  headers.rs
outgoing/: main.tf  outputs.tf  variables.tf
