[package]
name = "lambda-smtp-relay"
edition = "2018"
version = "0.1.0"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"

[[bin]]
name = "handler"
path = "./handler.rs"

[dependencies]
aws_lambda_events = "^0.2"
futures = "^0.3"
lambda_runtime = "^0.2"
lettre = {git = "https://github.com/lettre/lettre", branch = "master", default_features = false, features=["rustls-tls", "smtp-transport"]}
rusoto_core = {version = "^0.43.0-beta.1", default_features = false, features=["rustls"]}
rusoto_s3 = {version = "^0.43.0-beta.1", default_features = false, features=["rustls"]}
rustls = "^0.16"
serde = "^1.0"
serde_derive = "^1.0"
tokio = "^0.2"
webpki-roots = "^0.19"
