[package]
name = "amail-lambda-smtp-relay"
version = "0.1.0"
description = "Amail incoming SMTP relay"
edition = "2021"
authors = ["Oliver Ford"]
license-file = "../LICENCE"
repository = "https://github.com/OJFord/amail"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"

[[bin]]
name = "handler"
path = "./handler.rs"

[dependencies]
aws_lambda_events = "^0.2"
futures = "^0.3"
lambda_runtime = "^0.2"
lettre = {version = "=0.10.4", default_features = false, features=["builder", "rustls-tls", "smtp-transport"]}
log = "^0.4"
rusoto_core = {version = "^0.43.0-beta.1", default_features = false, features=["rustls"]}
rusoto_s3 = {version = "^0.43.0-beta.1", default_features = false, features=["rustls"]}
rustls = "^0.16"
serde = "^1.0"
serde_derive = "^1.0"
stderrlog = "^0.4"
tokio = "^0.2"
webpki-roots = "^0.19"
