[package]
name = "amail-lambda-smtp-relay"
version = "0.1.0"
description = "Amail incoming SMTP relay"
edition = "2021"
authors = ["Oliver Ford"]
license-file = "../LICENCE"
repository = "https://github.com/OJFord/amail"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"

[[bin]]
name = "handler"
path = "./handler.rs"

[dependencies]
aws_lambda_events = "^0.15"
futures = "^0.3"
lambda_runtime = "^0.11"
lettre = {version = "=0.11.2", default_features = false, features=["builder", "rustls-tls", "smtp-transport"]}
log = "^0.4"
rusoto_core = {version = "^0.48", default_features = false, features=["rustls"]}
rusoto_s3 = {version = "^0.48", default_features = false, features=["rustls"]}
rustls = "^0.21"
serde = "^1.0"
serde_derive = "^1.0"
stderrlog = "^0.6"
tokio = {version = "^1.37", features=["macros"]}
webpki-roots = "^0.26"
