[package]
name = "notmuch-more"
version = "0.0.0"
description = "Not much more than notmuch library bindings (but a little)"
edition = "2021"
authors = ["Oliver Ford"]
license-file = "../LICENCE"
repository = "https://github.com/OJFord/amail"

[dependencies]
ammonia = "^3.1.2"
anyhow = "^1.0"
base64 = "^0.22.1"
chrono = "^0.4.38"
delegate = "^0.13.1"
email = "^0.0.21"
itertools = "^0.13.0"
lettre = {version = "=0.11.2", default_features = false, features= ["builder", "rustls-tls", "smtp-transport"] }
mailparse = "^0.15.0"
mime_guess = "^2.0.5"
notmuch = "^0.8.0"
regex = "^1.11.1"
serde = { version = "^1.0", features = ["derive"] }
tempfile = "^3.11.0"
textwrap = "^0.16.1"
thiserror = "^1.0.67"
