[package]
name = "notmuch-more"
version = "0.0.0"
description = "Not much more than notmuch library bindings (but a little)"
edition = "2021"
authors = ["Oliver Ford"]
license-file = "../LICENCE"
repository = "https://github.com/OJFord/amail"

[dependencies]
ammonia = "^3.1.2"
anyhow = "^1.0"
base64 = "^0.22.1"
chrono = "^0.4.42"
delegate = "^0.12.0"
email = "^0.0.21"
itertools = "^0.12.1"
lettre = {version = "=0.11.2", default-features = false, features= ["builder", "rustls-tls", "smtp-transport"] }
mailparse = "^0.14.1"
mime_guess = "^2.0.5"
notmuch = "^0.8.0"
regex = "^1.12.2"
serde = { version = "^1.0", features = ["derive"] }
tempfile = "^3.11.0"
textwrap = "^0.16.2"
thiserror = "^1.0.58"
