[package]
name = "notmuch-more"
version = "0.0.0"
description = "Not much more than notmuch library bindings (but a little)"
edition = "2024"
authors = ["Oliver Ford"]
license-file = "../LICENCE"
repository = "https://github.com/OJFord/amail"

[dependencies]
ammonia = "^4.0.1"
anyhow = "^1.0"
base64 = "^0.22.1"
chrono = "^0.4.43"
delegate = "^0.13.5"
email = "^0.0.21"
itertools = "^0.14.0"
lettre = {version = "=0.11.19", default-features = false, features= ["builder", "rustls-tls", "smtp-transport"] }
mailparse = "^0.16.1"
mime_guess = "^2.0.5"
notmuch = "^0.8.0"
regex = "^1.12.2"
serde = { version = "^1.0", features = ["derive"] }
tempfile = "^3.12.0"
textwrap = "^0.16.2"
thiserror = "^1.0.58"
