[package]
name = "amail"
version = "0.0.0"
description = "AMail EML client"
authors = ["Oliver Ford"]
license-file = "../../LICENCE"
repository = "https://github.com/OJFord/amail"
default-run = "amail"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "^2.0.0-beta.10", features = [] }

[dependencies]
ammonia = "^3.1.2"
anyhow = "^1.0"
notmuch-more = "^0.0.0"
serde_json = "^1.0"
tauri = { version = "^2.0.0-beta.17", features = [] }
tauri-plugin-dialog = "^2.0.0-rc.0"
tauri-plugin-fs = "^2.0.0-beta.2"
tauri-plugin-shell = "^2.0.0-rc.0"
thiserror = "^1.0.67"
whoami = "^1.5.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
