[package]
name = "amail"
version = "0.0.0"
description = "AMail EML client"
authors = ["Oliver Ford"]
license-file = "../../LICENCE"
repository = "https://github.com/OJFord/amail"
default-run = "amail"
edition = "2024"

[build-dependencies]
tauri-build = { version = "^2.5.3", features = [] }
xtask-frontend = { path = "../xtask-frontend" }

[dependencies]
ammonia = "^4.0.1"
anyhow = "^1.0"
notmuch-more = "^0.0.0"
serde_json = "^1.0"
tauri = { version = "^2.9.5", features = [] }
tauri-plugin-dialog = "^2.5.0"
tauri-plugin-fs = "^2.4.5"
tauri-plugin-shell = "^2.3.4"
thiserror = "^1.0.58"
whoami = "^1.5.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
